samples/_failures_safe/1761308153_7c6949_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db7a71b8.c: In function ‘main’:
./samples/SAFE/__tmp_db7a71b8.c:167:25: error: expected ‘;’ at end of input
  167 |             print_matrix
      |                         ^
      |                         ;
./samples/SAFE/__tmp_db7a71b8.c:167:13: error: expected declaration or statement at end of input
  167 |             print_matrix
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_db7a71b8.c:167:13: error: expected declaration or statement at end of input
